# llaisys

./: CMakeLists.txt
cmake/cpu/: CMakeLists.txt
src/ops/argmax/: op.cpp
src/ops/argmax/cpu/: argmax_cpu.cpp
src/ops/embedding/: op.cpp
src/ops/embedding/cpu/: embedding_cpu.cpp  embedding_cpu.hpp
src/ops/linear/: op.cpp
src/ops/linear/cpu/: linear_cpu.cpp  linear_cpu.hpp
src/ops/rms_norm/: op.cpp
src/ops/rms_norm/cpu/: rms_norm_cpu.cpp  rms_norm_cpu.hpp
src/ops/rope/: op.cpp
src/ops/rope/cpu/: rope_cpu.cpp  rope_cpu.hpp
src/ops/self_attention/: op.cpp
src/ops/self_attention/cpu/: self_attention_cpu.cpp  self_attention_cpu.hpp
src/ops/swiglu/: op.cpp
src/ops/swiglu/cpu/: swiglu_cpu.cpp  swiglu_cpu.hpp
src/tensor/: tensor.cpp
